<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="one.tesseract.weatherme.MainActivityFragment"
    tools:showIn="@layout/activity_main">

    <TextView
        android:text="@string/dummyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/titleText"
        android:textAppearance="@android:style/TextAppearance.Material.Title" />

    <TextView
        android:text="@string/dummyHighTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:id="@+id/highTempText"
        android:textAppearance="@android:style/TextAppearance.Material.Display2"
        android:layout_below="@+id/titleText"
        android:layout_alignParentStart="true"
        android:layout_marginStart="60dp" />

    <TextView
        android:text="@string/dummyLowTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lowTempText"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        android:layout_below="@+id/highTempText"
        android:layout_alignEnd="@+id/highTempText" />

    <ImageView
        android:contentDescription="@string/dummyIconDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/star_big_on"
        android:id="@+id/weatherIcon"
        android:layout_alignTop="@+id/highTempText"
        android:layout_alignParentStart="true"
        android:layout_marginStart="240dp" />

    <TextView
        android:text="@string/dummyStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/weatherStatusText"
        android:layout_below="@id/weatherIcon"
        android:layout_marginStart="-25dp"
        android:layout_alignStart="@+id/weatherIcon" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/lowTempText"
        android:layout_marginTop="20dp"
        android:id="@+id/listView_forecast"
        tools:listitem="@layout/list_item_forecast" />

</RelativeLayout>
